# pyretis-feedstock

./: .codacy.yml  .coverage.scassa.pid370504.XFvAOzrx.HORI7a6MsYKh  .coverage.scassa.pid370507.XcfhDEmx.Hx3IKd2fbQ3h  .coverage.scassa.pid370513.XdsQBsAx.Hrix3BKTNbrh  .coverage.scassa.pid370516.XGLlyW5x.HVmOYt7w6Q2h  .coverage.scassa.pid370519.X03iEQix.HWQcdsTmuaqh  .coverage.scassa.pid370522.XEWV9whx.HTHowkJOGych  .coverage.scassa.pid370525.X2k6n5Gx.H8PMi6QiEIPh  .coverage.scassa.pid370528.XpJTBrRx.HhOJFoFBg1Zh  .coverage.scassa.pid370532.Xcjhtyyx.HKIegu007UCh  .coverage.scassa.pid370535.Xn1dgSzx.Ht6DNKR01hEh  .coverage.scassa.pid370538.XqEq9hsx.Ha0QpCPoKIJh  .coverage.scassa.pid370541.X4d4Mgpx.HXvJ0IJB5D1h  .coverage.scassa.pid370544.XosfSZyx.H7ilncvVYCsh  .coverage.scassa.pid370547.X8Nq1crx.HmT06UCGJijh  .coverage.scassa.pid370551.XRC1i2Xx.HDdpjpd4QP4h  .gitignore  .gitlab-ci.yml  .prospector.yaml  .pylintrc  INSTALL  Makefile  PCA_data_000_2.hdf  README.rst  check_style.py  engine.err  files_cookie_first.txt  files_cookie_not_first.txt  pyproject.toml  recent_files.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_version.py  suspicious_tracked.txt  test-easy  test-easy.sh  test-heavy.sh  version.json
.agents/workflows/: custom_style.md
.claude/: settings.json
devtools/: run_linting.py  update_copyright.py
devtools/docs/: check_api_docs.py  make_table.py  mpl_object.py
docs/: conf.py  index.rst
docs/api/: pyretis.core.rst  pyretis.rst  pyretis.testing.rst
docs/developer/: docs-style.rst  index.rst
docs/examples/: examples-openmm.rst  examples-permeability.rst  examples-pyvisa-analysis.rst  examples-pyvisa.rst  examples-submoves-1d.rst
docs/ext/: pyretis_collapse_block.py  pyretis_highlight.py  pyretis_input_example.py  pyretis_keyword.py  pyretis_translator.py  pyretisstyle.py
docs/user/: analyse.rst  application.rst  engine.rst  getting-started.rst  index.rst  input.rst  install.rst  intro-api.rst  intro.rst  lammps.rst  path-types-rejections.rst  pyvisa.rst
examples/test/: common-clean.mk  common-clean.sh
examples/umbrella_sampling/: umbrella_sampling_mc.py  umbrella_sampling_mc_movie.py
pyretis/: __init__.py  info.py  version.py
pyretis/core/: box.py  (+13 more)
scripts/: remove_encoding_cookie.sh
test/: PCA_data_000_2.hdf  test_version_extra.py
(+808 files in other folders)
