[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyretis"
dynamic = ["version"]
description = "A simulation package for rare events"
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "LGPLv2.1+"}
authors = [
    {name = "PyRETIS Development Team", email = "pyretis@pyretis.org"},
]
keywords = ["rare-events", "md", "mc", "tps", "simulation", "tis", "retis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.3.0",
    "matplotlib>=3.5",
    "jinja2>=3.0.1",
    "docutils>=0.14",
    "tqdm>=4.15.0",
    "colorama>=0.3.9",
    "pandas>=1.1.1",
    "tables>=3.6.1",
    "cython>=0.29",
]

[project.optional-dependencies]
docs = [
    "sphinx<5.3.0",
    "sphinx_bootstrap_theme>=0.6.0",
]

[project.urls]
Homepage = "http://www.pyretis.org"

[project.scripts]
pyretisrun = "pyretis.bin.pyretisrun:entry_point"
pyretisanalyse = "pyretis.bin.pyretisanalyse:entry_point"
pyvisa = "pyretis.bin.pyvisa:entry_point"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs*"]

[tool.setuptools.package-data]
pyretis = [
    "pyretis.mplstyle",
    "inout/report/templates/*",
    "pyvisa/pyvisaGUI.ui",
]

[tool.setuptools.dynamic]
version = {attr = "pyretis.version.VERSION"}

[tool.coverage.report]
omit = [
    "*/python?.?/*",
    "*/site-packages/numpy/*",
    "*/test/*",
    "*/setup.py",
    "*/setup_version.py",
    "*/pyvisa/resources_rc.py",
    "openmm_module.py",
    "/tmp/*",
]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff.lint]
ignore = ["D213"]
